# HIT-WorkShop

./: Readme.md
CSAPP/: .gitignore  CMakeLists.txt  README.md
CSAPP/Chapter2/: CMakeLists.txt  Work.tex
CSAPP/Chapter2/src/: 2.56.c  2.60.c  2.64.c  2.68.c  2.72.c  2.76.c  2.80.c  2.84.c  2.88.c  2.92.c  2.96.c
CSAPP/Chapter3/: Readme.md
CSAPP/Chapter4/: CMakeLists.txt  Readme.md
CSAPP/Chapter4/answer-code/: Switch.c  Switchv.ys
CSAPP/Chapter4/misc/: CMakeLists.txt  hcl2c  lex.yy.c  yas  yas-grammar.c  yis
CSAPP/Chapter4/pipe/: pipe-btfnt.hcl  pipe-full.hcl  psim
CSAPP/Chapter4/seq/: seq-full.hcl  ssim
CSAPP/Chapter4/y86-code/: CMakeLists.txt
CSAPP/Chapter5/: Readme.md
CSAPP/Chapter6/: CMakeLists.txt  Readme.md
CSAPP/Chapter7/: CMakeLists.txt  Readme.md
CSAPP/Chapter8/: CMakeLists.txt  Readme.md  myls.c  waitpid.c
CSAPP/Chapter9/: CMakeLists.txt  Readme.md  hello.c  mm.c
CSAPP/Experiment1/: CMakeLists.txt  Report.tex
CSAPP/Experiment1/Chapter/: 第1章.tex  第2章.tex  第3章.tex  第4章.tex  第5-6章.tex  第7章.tex  第8章.tex  第9-10章.tex
CSAPP/Experiment1/src/: datatype.c  float.c  hello.c  hellolinux.c  hellowin.c  showbytes.c  sum.c  sysinfo.c
CSAPP/Experiment2/: CMakeLists.txt  Report.tex
CSAPP/Experiment2/Chapter/: 第1章.tex  第2章.tex  第3章.tex  第4章.tex  第5章.tex  第6章.tex
CSAPP/Experiment2/src/: Driverhdrs.pm  bits.c  bits.h  decl.c  tests.c
CSAPP/Experiment3/: CMakeLists.txt  Readme.md  Report.tex
CSAPP/Experiment3/Chapter/: 第1章.tex  第2章.tex  第3章.tex  第4章.tex
CSAPP/Experiment3/src/: README  Sample.c  ans.txt  bomb
CSAPP/Experiment4/: Readme.md  Report.tex
CSAPP/Experiment4/Chapter/: 第1章.tex  第2章.tex  第3章.tex  第4章.tex
CSAPP/Experiment4/src/answers/: bang.txt  bomb.txt  fizz.txt  nitro.txt
CSAPP/Experiment5/: CMakeLists.txt  Readme.md  Report.tex
CSAPP/Experiment5/Chapter/: 第1章.tex  第2章.tex  第3章.tex  第4章.tex
CSAPP/Experiment5/src/: File.md  csim.c  trans.c
CSAPP/Experiment6/: CMakeLists.txt  Readme.md  Report.tex
CSAPP/Experiment6/Chapter/: 第1章.tex  第2章.tex  第3章.tex  第4章.tex  第5章.tex
CSAPP/Experiment6/figures/: builtin.dot  dobgfg.dot  evil.dot  sigchld_handler.dot  waitfg.dot
CSAPP/Experiment6/src/: tsh.c
CSAPP/Experiment7/: CMakeLists.txt  Readme.md  Report.tex
CSAPP/Experiment7/Chapter/: 第1章.tex  第2章.tex  第3章.tex  第4章.tex  第5章.tex
CSAPP/Experiment7/figures/: Test_Malloc.eps
CSAPP/Experiment7/src/: clock.c  config.h  fcyc.c  fcyc.h  fsecs.c  ftimer.c  ftimer.h  mdriver.c  memlib.c  memlib.h  mm-implicit.c  mm.c
CSAPP/SEQ/: Readme.md  Report.tex
CSAPP/SEQ/Chapter/: 第1章.tex  第2章.tex  第3章.tex  第4章.tex
CSAPP/SEQ/sim/: testMem.v  testbench.v
CSAPP/SEQ/src/: BMemory.v  Decode.v  Excute.v  Fetch.v  Mem.v  MemCtrl.v  PC.v  Refile.v  cenrreg.v  need_regids.v  processor.v
Compiler/Remeo/: .gitignore  CMakeLists.txt  Readme.md
Compiler/Remeo/Grammer/: BaseGrammer.txt  Grammer.txt  LRGrammer.txt  LRTest.txt
Compiler/Remeo/RmoCode/: BaseCode.txt  base.txt  class.txt  function.txt  logic.txt  string.txt
Compiler/Remeo/Romeo/: CMakeLists.txt
Compiler/Remeo/Romeo/src/: BaseContext.cpp  CFG.cpp  LL1.cpp  LR1.cpp  Meta.cpp  Parser.cpp  Scanner.cpp  Token.cpp  Utility.cpp
Compiler/Remeo/RomeoGUI/: CMakeLists.txt
Compiler/Remeo/RomeoGUI/lang/: lang_zh.ts
Compiler/Remeo/RomeoGUI/src/: CMakeLists.txt  RomeoGUI.cpp
Compiler/Remeo/RomeoGUI/ui/: RomeoGUI.ui
Compiler/Remeo/RomeoLang/: CMakeLists.txt  dev.cpp
Compiler/Remeo/RomeoLang/include/: LL1Context.h  LR1Context.h  RmoDefine.h
Compiler/Remeo/RomeoLang/src/: LL1Context.cpp  LR1Context.cpp  RmoDefine.cpp
DataStruct/: .gitignore  CMakeLists.txt  Readme.md
DataStruct/Chapter2-Experiment/: CMakeLists.txt  Readme.md  list.c  list.h  polymain.c  polynomial.c  polynomial.h  testlist.c
DataStruct/Chapter2-Experiment/report/: 实验报告.tex
DataStruct/Chapter2-Experiment/report/Chapter/: 第1-2章.tex  第3章.tex  第4章.tex  第5章.tex  第6章.tex
DataStruct/Chapter2-Experiment/report/figures/: main.dot  polymain.dot
DataStruct/Chapter2-Homework/: CMakeLists.txt  Caclu.cpp  Caclu.h  Mstack.h  Praser.cpp  Praser.h  Readme.md  backCaclu.cpp
DataStruct/Chapter3-Experiment/: BitTree.hpp  CMakeLists.txt  Readme.md  treeMain.cpp
DataStruct/Chapter3-Experiment/report/: 实验报告.tex
DataStruct/Chapter3-Experiment/report/Chapter/: 第3章.tex  (+4 more)
DataStruct/Chapter3-Homework/: CMakeLists.txt  Huffmain.cpp  Huffman.cpp  Huffman.h  Readme.md
DataStruct/Chapter4-Experiment/: CMakeLists.txt  Graph.cpp  Graph.h  Graph.txt  GraphMain.cpp  InfoGraph.h  Readme.md
DataStruct/Chapter4-Experiment/report/: 实验报告.tex
DataStruct/Chapter4-Homework/: Binaryheap.c  CMakeLists.txt  Graph.txt  Graph_tools.c  Graph_tools.h  MinTree.c  Readme.md
DataStruct/Chapter5-Experiment/: AvlMain.cpp  AvlTree.h  CMakeLists.txt  Data.txt  Readme.md
DataStruct/Chapter5-Experiment/report/: 实验报告.tex
DataStruct/Chapter5-Homework/: CMakeLists.txt  Readme.md  Sort.h  sortMain.cpp
GraphAndSetTheory/: CMakeLists.txt  README.md
GraphAndSetTheory/Code/: Binaryheap.h  Graph.c  Graph.h  Graph_tools.c  Graph_tools.h  WeightGraph.c  WeightGraph.h  main.c
GraphAndSetTheory/Report/LaTex/: Clear.cmd  MiniLen.tex  MiniTree.tex
GraphAndSetTheory/Report/Pics/: DataStruct.dot  DataStruct.eps  MiniLen.eps  MiniLen.mmd  MiniTree.eps  MiniTree.mmd  Test-MinLen-out.eps  Test-MinLen-out.mmd  Test-MinLen.eps  Test-MinLen.mmd  Test-MiniTree-out.eps  Test-MiniTree-out.mmd  Test-MiniTree.eps  Test-MiniTree.mmd
GraphAndSetTheory/StableMatching/: Queue.c  Queue.h  StableMatching.c  StableMatching.h  stable.c
Net/TinyHttpServer/: .gitignore  CMakeLists.txt  HttpServer.cpp  HttpServer.h  Readme.md  main.cpp
Net/Tinyproxy/: .gitignore  CMakeLists.txt  LICENSE  config.toml
Net/Tinyproxy/src/: DateTime.cpp  DateTime.h  Http.cpp  Http.h  main.cpp  utils.h
Text2Scene/: .gitignore  .gitmodules  CMakeLists.txt  DisplayCanvas.cpp  DisplayCanvas.h  MainFrame.cpp  MainFrame.h  ObjectSimilarity.cpp  ObjectSimilarity.h  README.md  StringToID.h  WordSimilarity.cpp  WordSimilarity.h  WorldMgr.cpp  WorldMgr.h  main.cpp  wxSFMLCanvas.cpp  wxSFMLCanvas.h
(+181 files in other folders)
