cmake_minimum_required(VERSION 3.9)

add_definitions(-DDEBUG)

add_subdirectory(Chapter2-Experiment)
add_subdirectory(Chapter2-Homework)
add_subdirectory(Chapter3-Experiment)
add_subdirectory(Chapter3-Homework)
add_subdirectory(Chapter4-Experiment)
add_subdirectory(Chapter4-Homework)
add_subdirectory(Chapter5-Experiment)
add_subdirectory(Chapter5-Homework)